--- a/style.css
+++ b/style.css
@@ -1,57 +1,6 @@
-/* Begin of reseting browser default  */
-
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-    display: block;
-}
-body {
-    line-height: 1;
-}
-ol, ul {
-    list-style: none;
-}
-blockquote, q {
-    quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-    content: '';
-    content: none;
-}
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-
-/* End of reseting browser default  */
-
 body{
     background-color: grey;
+  
 }
 
 
@@ -59,43 +8,20 @@ body{
     border: 2px  solid black;
     display: flex;
     flex-wrap: wrap;
-    width: 512px;
-    height: 512px;
-    background-color: yellow;
-}
-.container{
-    width: 512px;
-    height: 512px;
+    width: 560px;
+    height: 560px;
+   
+   
 }
 
 /* 16 x 16  */
 .gridDiv{
-   text-align: center;
-    width:32px;
-    height: 32px;
+   
     background: white;
-
-    justify-content: space-around;
-
-}
-.gridDiv:hover{
-   background-color: blueviolet;
+    border: 1px solid gray;
    
 }
-
-/* 64 x 64  */
-
-
-.grid64Div{
-   text-align: center;
-    width:8px;
-    height: 8px;
-    background: white;
-
-    justify-content: space-around;
-
-}
-.grid64Div:hover{
+.gridDiv:hover{
    background-color: blueviolet;
    
 }
